brightminds design updated

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
     />
-    <meta name="theme-color" content="#FF3737" />
+    <meta name="theme-color" media="(prefers-color-scheme:light)" content="#FF3737" />
+    <meta name="theme-color" media="(prefers-color-scheme:dark)" content="#FF3737" />
     <title>DAAN KGP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
