--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
     />
-    <meta name="theme-color" media="(prefers-color-scheme:light)" content="#FF3737" />
-    <meta name="theme-color" media="(prefers-color-scheme:dark)" content="#FF3737" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme:light)"
+      content="#FF3737"
+    />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme:dark)"
+      content="#FF3737"
+    />
     <title>DAAN KGP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,5 +34,11 @@
     <div id="root"></div>
 
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      document.addEventListener("copy", (event) => {
+        event.clipboardData.setData("text/plain", "Copy protection activated! Don't worry, we won't tell anyone you tried to steal our content.");
+        event.preventDefault();
+      });
+    </script>
   </body>
 </html>
