--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
     <title>DAAN KGP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;&display=swap"
-      rel="stylesheet"
-    />
+   <link href="https://fonts.googleapis.com/css2?family=Geist:wght@500..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
