meta data updated

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
     />
     <meta
+      name="description"
+      content="DAAN KGP is a well-structured DakshanA Alumni Network
+                established at the Indian Institute of Technology, Kharagpur."
+    />
+    <meta
+      name="keyword"
+      content="daan kgp, daan-kgp, kgpian dakshanite, dakshanites at kgp, dakshanites at iit kgp, kgpian dakshanites, dakshana alumni network at Indian institute of technology Kharagpur, daan at iit kgp, daan at kgp, kgp dakshana"
+    />
+
+    <meta
       name="theme-color"
       media="(prefers-color-scheme:light)"
       content="#FF3737"
