--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://res.cloudinary.com/dcwwptwzt/image/upload/v1746467915/DAAN_KGP_Logo_bhdfxo.png"
+      href="https://res.cloudinary.com/dcwwptwzt/image/upload/v1754520271/Favicon_ah3auk.avif"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
