meta tags added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </script>
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
+    <meta http-equiv="Content-Language" content="en" />
     <link
       rel="icon"
       type="image/svg+xml"
@@ -28,14 +29,12 @@
     />
     <meta
       name="description"
-      content="DAAN KGP is a well-structured DakshanA Alumni Network
-                established at the Indian Institute of Technology, Kharagpur."
+      content="DAAN KGP is the DakshanA Alumni Network at IIT Kharagpur, created to bring together Dakshana scholars, alumni, and students on one platform. The network serves as a bridge for mentorship, career guidance, and academic support while building a strong sense of community among scholars. Through interactive sessions, alumni talks, volunteering, and social initiatives, DAAN KGP helps students at IIT Kharagpur make informed career choices, prepare for higher studies, and grow as leaders. It also focuses on giving back to society through awareness campaigns, outreach programs, and collaborative projects that reflect the spirit of Dakshana. By connecting past and present scholars, DAAN KGP strengthens bonds, shares opportunities, and creates a culture of support and service within IIT Kharagpur."
     />
     <meta
-      name="keyword"
-      content="daan kgp, daan-kgp, kgpian dakshanite, dakshanites at kgp, dakshanites at iit kgp, kgpian dakshanites, dakshana alumni network at Indian institute of technology Kharagpur, daan at iit kgp, daan at kgp, kgp dakshana"
+      name="keywords"
+      content="DAAN KGP, Dakshana Alumni Network, Dakshana IIT Kharagpur, Dakshana scholars IIT KGP, IIT Kharagpur alumni network, DAAN IIT Kharagpur, student mentorship IIT Kharagpur, career guidance Dakshana alumni, higher studies guidance IIT KGP, alumni mentorship programs IIT, student support Dakshana scholars, Dakshana community Kharagpur, alumni-student connect IIT KGP, networking for Dakshana alumni, IIT Kharagpur student-alumni network, collaboration among Dakshana scholars, social initiatives Dakshana alumni, outreach programs IIT KGP, volunteering at IIT Kharagpur, giving back to society IIT alumni, awareness campaigns by DAAN, how Dakshana alumni help IIT Kharagpur students, mentorship opportunities for Dakshana scholars, alumni guidance network at IIT Kharagpur, career counseling by Dakshana alumni, Dakshana student community at IIT KGP, daan kgp, daan-kgp, kgpian dakshanite, dakshanites at kgp, dakshanites at iit kgp, kgpian dakshanites, dakshana alumni network at Indian institute of technology Kharagpur, daan at iit kgp, daan at kgp, kgp dakshana"
     />
-
     <meta
       name="theme-color"
       media="(prefers-color-scheme:light)"
@@ -44,7 +43,7 @@
     <meta
       name="theme-color"
       media="(prefers-color-scheme:dark)"
-      content="#FF3737"
+      content="#212121"
     />
     <title>DAAN KGP</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,6 +52,26 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dubu8yxkm/image/upload/v1754643907/Favicon_ichxzi.avif"
+    />
+    <meta property="og:title" content="DAAN KGP | DakshanA Alumni Network at IIT Kharagpur" />
+    <meta
+      property="og:description"
+      content="DAAN KGP is the DakshanA Alumni Network at IIT Kharagpur, created to bring together Dakshana scholars, alumni, and students on one platform. The network serves as a bridge for mentorship, career guidance, and academic support while building a strong sense of community among scholars. Through interactive sessions, alumni talks, volunteering, and social initiatives, DAAN KGP helps students at IIT Kharagpur make informed career choices, prepare for higher studies, and grow as leaders. It also focuses on giving back to society through awareness campaigns, outreach programs, and collaborative projects that reflect the spirit of Dakshana. By connecting past and present scholars, DAAN KGP strengthens bonds, shares opportunities, and creates a culture of support and service within IIT Kharagpur."
+    />
+    <meta property="og:url" content="https://daan-kgp.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="DAAN KGP" />
+    <meta property="og:locale" content="en_IN" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dcwwptwzt/image/upload/v1756546099/Favicon_ou3jh8.png"
+    />
+    <link rel="canonical" href="https://daan-kgp.vercel.app" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
